5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1650_651.log
== TEST (2019-04-15 13:33:38) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
M = (72.7 * a) - 58
F = (62.1 * a) - 44.7
if(s == M):
	print(M)
else:
	print(F)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:12) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
M = (72.7 * a) - 58
F = (62.1 * a) - 44.7
if(s == M):
	print(M)
else:
	print(F)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:32) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
M = (72.7 * a) - 58
F = (62.1 * a) - 44.7
if(s == M):
	print(round(M, 2))
else:
	print(F)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:13) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
M = (72.7 * a) - 58
F = (62.1 * a) - 44.7
if(s == F):
	print(round(F, 2))
else:
	print(M)
-- OUTPUT:
14.700000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:38) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
M = (72.7 * a) - 58
F = (62.1 * a) - 44.7
if(s == F):
	print(round(F, 2))
else:
	print(round(M, 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:35:47) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
M = (72.7 * a) - 58
F = (62.1 * a) - 44.7
if(s == F):
	print(round(F, 2))
else:
	print(round(M, 2))
-- EXECUTION TIME:
0.217265
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:26) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
h = (72.7 * a) - 58
m = (62.1 * a) - 44.7
if(s == M):
	print(round(h, 2))
else:
	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(s == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:39) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == M):
	print(round(h, 2))
else:
	print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(s == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:31) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:38:39) 
-- CODE:
a = float(input("Digite a altura: "))
s = input("Digite M ou F: ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
-- EXECUTION TIME:
0.123984
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
